<resources>
    <string name="app_name">RFID扫描</string>
    <string name="app_activityName"> \tRFID扫描\t\t\t\t\tVer180725</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">连接</string>
    <string name="Scan">扫描</string>
    <string name="get">Get</string>
    <string name="set">Set</string>
    <string name="tagOperation">操作</string>
    <string name="ConfigSetting">配置</string>
    <string name="action_system">系统配置</string>
    <string name="Message">Message</string>
    <string name="systemlayout_textView_system_tv">参数 </string>
    <string name="systemlayout_button_saveparam">保存 </string>
    <string name="systemlayout_button_paramdefault">默认参数</string>
    <string name="indicatorlayout_tv_indicator">天线选择</string>
    <string name="tab1_layout_textView34">电源管理 </string>
    <string name="tab1_layout_textView5">平台选择 </string>
    <string name="tab1_layout_textView35">连接读写器</string>
    <string name="tab1_layout_textView36">串口 </string>
    <string name="tab1_layout_textView2">天线口 </string>
    <string name="tab1_layout_button_connect">连接 </string>
    <string name="tab1_layout_button_disconnect">断开</string>
    <string name="tab2_layout_button_start">开始</string>
    <string name="tab2_layout_button_stop">停止</string>
    <string name="tab2_layout_button_readclear">清除</string>
    <string name="tab2_layout_button_readset">设置 </string>
    <string name="tab2_layout_textView1">本次读到标签个数：</string>
    <string name="tab2_layout_textView2">读到标签总数：</string>
    <string name="tab2_layout_textView3">设备状态：</string>
    <string name="connectSec">连接成功</string>
    <string name="connectFalse">连接失败</string>
    <string name="powerUpSec">上电成功</string>
    <string name="powerUpFalse">上电失败</string>
    <string name="tag">块区</string>
    <string name="tag6b">UID</string>
    <string name="hexadecimal">16进制</string>
    <string name="start_address">起始地址</string>
    <string name="tag_count">块数</string>
    <string name="read_operate">读块区操作</string>
    <string name="write_operate">写块区操作</string>
    <string name="lock_operate">锁块区操作</string>
    <string name="lock_type">锁类型</string>
    <string name="selete_antenna">Selete antenna</string>
    <string name="antenna_detecting">天线检测</string>
    <string name="antenna_power">天线功率</string>
    <string name="antenna_detect">检测天线</string>
    <string name="antenna_no_detect">不检测天线</string>
    <string name="antenna1_r">Ate1R</string>
    <string name="antenna2_r">Ate2R</string>
    <string name="antenna3_r">Ate3R</string>
    <string name="antenna4_r">Ate4R</string>
    <string name="antenna1_w">Ate1W</string>
    <string name="antenna2_w">Ate2W</string>
    <string name="antenna3_w">Ate3W</string>
    <string name="antenna4_w">Ate4W</string>
    <string name="antenna1">Antenna1 OutputPower</string>
    <string name="antenna2">Antenna2 OutputPower</string>
    <string name="antenna3">Antenna3 OutputPower</string>
    <string name="antenna4">Antenna4 OutputPower</string>
    <string name="area">区域</string>
    <string name="frequency">频率</string>
    <string name="check_frequency">查看频点</string>
    <string name="set_frequency">设置频点</string>
    <string name="run_time">runTime</string>
    <string name="tags_6b">6B标签</string>
    <string name="tags">标签：</string>
    <string name="always_lock">永久锁定地址</string>
    <string name="check_Lock_state">查询永久锁定状态</string>
    <string name="device_msg">模块初始化失败</string>
    <string name="ReadTags">盘点</string>
    <string name="RWLock">读写锁</string>
    <string name="Set_title">设置</string>
    <string name="Real_time">实时</string>
    <string name="fast_time">快速</string>
    <string name="read_state">开始读取...</string>
    <string name="stop_read_msg">停止读取</string>
    <string name="clearAll_Wait">清空完成,等待操作...</string>
    <string name="please_wait">正在处理数据，请稍后。。。</string>
    <string name="wait_operate">等待操作...</string>
    <string name="loading">正在处理,请稍后...</string>
    <string name="alright">好的</string>
    <string name="url_server_address">http://10.10.19.211:8089/RFIDProject</string>
    <string name="url_server_update">http://192.168.43.202:8080/MyFirstServletDemo/servlet/HelloServlet/getVersionName</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="scan_service_running">扫描服务正在运行...</string>
    <string name="service_description">开启后，才能使用按键触发扫描。</string>
    <string name="filter_number">0123456789</string>
    <string name="power_set_succeed">功率设置成功</string>
    <string name="power_set_failed">功率设置失败</string>
    <string name="toys">M 1278.43 1.63 C 1287.08 -0.60 1296.46 0.13 1304.77 3.35 C 1314.05 6.95 1321.22
14.77 1325.25 23.75 C 1329.08 32.22 1329.09 42.08 1326.60 50.93 C 1321.16 69.26
1300.34 80.94 1281.80 76.86 C 1264.89 73.74 1251.17 58.22 1250.59 40.96 C
1249.53 23.58 1261.65 6.35 1278.43 1.63 M 1280.48 6.70 C 1267.63 10.12 1257.76
22.04 1255.88 35.07 C 1253.90 50.80 1264.75 66.76 1279.93 71.08 C 1298.42 77.11
1320.22 63.34 1322.83 44.11 C 1325.49 28.46 1315.30 11.67 1300.00 7.22 C 1293.74
5.04 1286.86 5.16 1280.48 6.70 Z"</string>
</resources>