<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab2_inv"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#528DCC"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/tv_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="配置地址"
            android:textColor="@color/white"
            android:textSize="22dp" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/putin_item_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:text="作业模式:"
            android:textColor="@color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/hz_grey_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvFaHuo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="发货"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <kld.com.rfid.ldw.demand2.CheckSwitchButton
                android:id="@+id/mCheckSwithcButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tvBuHuo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="取消"
                android:textColor="@color/black"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hz_grey_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/putin_item_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:text="当前通道:"
            android:textColor="@color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/hz_grey_line" />

        <LinearLayout
            android:id="@+id/llMore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvChannel"
                style="@style/putin_item_content_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:text="请选择通道"
                android:textColor="@color/red" />

            <View
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/icon_more" />
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hz_grey_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_layout_button_start"
            android:textAllCaps="false"
            android:textSize="17dp" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_layout_button_stop"
            android:textAllCaps="false"
            android:textSize="17dp" />

        <Button
            android:id="@+id/button_readclear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_layout_button_readclear"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_layout_button_readset"
            android:textAllCaps="false"
            android:textSize="17dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/butSetUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_layout_button_readset"
            android:textAllCaps="false"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">




        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/tab2_layout_textView2" />

        <TextView
            android:id="@+id/textView_readallcnt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:text="0" />



        <TextView
            android:id="@+id/textView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="00:00:00"
            android:visibility="gone" />
        <Button
            android:id="@+id/btSetPower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="设置功率"
            android:textSize="17dp" />

        <Button
            android:id="@+id/btCheckUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="检查更新"
            android:textSize="17dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_layout_textView3" />

        <TextView
            android:id="@+id/textView_invstate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <CheckBox
            android:id="@+id/cb_is6btag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tags_6b"
            android:visibility="invisible" />

        <CheckBox
            android:id="@+id/cb_readtid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="TID"
            android:visibility="gone" />

    </LinearLayout>


    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="@color/hz_grey_line" />-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="40dp"-->
    <!--android:background="@color/white"-->
    <!--android:orientation="horizontal">-->

    <!--<TextView-->
    <!--android:paddingLeft="0dp"-->
    <!--android:layout_marginLeft="5dp"-->
    <!--style="@style/putin_item_content"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center"-->
    <!--android:textColor="@color/black"-->
    <!--android:text="通道:" />-->

    <!--<View-->
    <!--android:layout_width="1dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@color/hz_grey_line" />-->

    <!--<LinearLayout-->
    <!--android:id="@+id/llMore"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="2"-->
    <!--android:orientation="horizontal">-->

    <!--<TextView-->
    <!--android:id="@+id/tvChannel"-->
    <!--style="@style/putin_item_content_black"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:text="请选择通道"-->
    <!--android:gravity="center"-->
    <!--android:layout_marginLeft="0dp"-->
    <!--android:paddingLeft="0dp"-->
    <!--android:textColor="@color/red"-->
    <!--android:layout_weight="2" />-->

    <!--<View-->
    <!--android:layout_width="30dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_margin="5dp"-->
    <!--android:background="@drawable/icon_more" />-->
    <!--</LinearLayout>-->
    <!--</LinearLayout>-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hz_grey_line" />
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_weight="1" >-->
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal" >-->
    <ListView
        android:id="@+id/listView_epclist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff0f0"
        android:transcriptMode="alwaysScroll"
        android:visibility="gone"></ListView>


    <LinearLayout
        android:id="@+id/llTestShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etSuffix"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18dp"
                android:hint="后缀"/>
            <Button
                android:id="@+id/btSureSuffix"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="修改后缀"
                />

            <Button
                android:id="@+id/btClearAll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="10dp"
                android:text="清空统计数据"/>
            <Button
                android:id="@+id/btSortList"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="10dp"
                android:text="下面数据排序"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="非PA开头数量:"
                />
            <TextView
                android:id="@+id/tvUnPAStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvAAA"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="AAA结尾的数量:"/>
            <TextView
                android:id="@+id/tvSuffixNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="0"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvUnAAA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="非AAA结尾的数量:"
                />
            <TextView
                android:id="@+id/tvUnSuffixNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                />

        </LinearLayout>



    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>


    <!--</LinearLayout>-->


    <!--</LinearLayout>-->


    <!--<ScrollView-->
    <!--android:id="@+id/scrollView1"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1" >-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical" >-->

    <!--<HorizontalScrollView-->
    <!--android:id="@+id/horizontalScrollView1"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content" >-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal" >-->

    <!--<ListView-->
    <!--android:id="@+id/listView_epclist"-->
    <!--android:layout_width="803dp"-->
    <!--android:layout_height="999999dp"-->
    <!--android:background="#fff0f0" >-->

    <!--</ListView>-->
    <!--</LinearLayout>-->
    <!--</HorizontalScrollView>-->

    <!--</LinearLayout>-->
    <!--</ScrollView>-->

</LinearLayout>